service-ingress/azure-example-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: remove-server-header
  namespace: pvc-example
spec:
  headers:
    customResponseHeaders:
      server: "" # Removes
