service-ingress/azure-example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: azure-vote-ingress
  namespace: pvc-example
  annotations:
    #kubernetes.io/spec.ingressClassName: traefik
    #kubernetes.io/spec.ingressClassName: nginx
    # ingress.kubernetes.io/auth-type: basic
    # ingress.kubernetes.io/auth-secret: mysecret
spec:
  ingressClassName: nginx
  rules:
  - host: azure-vote
    http:
      paths:
      - backend:
          service:
            name: azure-vote-front
            port: 
              number: 80
        path: /
        pathType: Prefix
